Add SelectSearch as a dropdown solution
* Make minor style tweaks to existing form elements to make it look
  cleaner
* Add react-select-search to the project as a solution for searchable
  dropdown form option
* Add some minor custom styles to make it match the rest of our form

--- a/client/src/CheckboxGroup.module.scss
+++ b/client/src/CheckboxGroup.module.scss
@@ -3,10 +3,11 @@
 .group {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 2rem;
 }
 
 .title {
-  font-size: 1.65rem;
+  font-size: 1.5rem;
   font-weight: normal;
   margin-bottom: 1.5rem;
 }
