Begin adding a library for managing users/auth/jwt
* Add base for an auth server based on rest
* Add some library functions + tests for managing users, jwt, auth
* We're going to next install and start using dynamodb local from
serverless

--- a/client/src/FormEdit.module.scss
+++ b/client/src/FormEdit.module.scss
@@ -6,16 +6,12 @@
   justify-content: center;
 }
 
-.deadLeft {
-  flex: 1;
-}
-
 .formEditContainer {
-  flex: 3;
+  width: 80rem;
 }
 
 .controlsContainer {
-  flex: 1;
+  border: 1px solid red;
 }
 
 .formSection {
