Add general layout for editting a form
* Add a bottom toolbar for adding questions
* Add a toolbar for setting the options on a form question
* Fix up some global styling around background color
* Set up a pattern for dealing with a mobile bottom fixed toolbar
* Not hooked up to state yet

--- a/client/src/CheckboxOption.module.scss
+++ b/client/src/CheckboxOption.module.scss
@@ -3,11 +3,17 @@
 .fieldset {
   display: flex;
   align-items: center;
-  flex-basis: 50%;
-  height: 3rem;
-  margin-bottom: 1rem;
+  width: 45%;
+  margin: 0;
+}
+
+.fieldsetEnd {
+  justify-content: flex-end;
+}
+
+.label {
+  width: 100%;
 }
 
 .checkbox {
-  width: 5rem;
 }
