--- a/client/src/react-selectsearch-custom.scss
+++ b/client/src/react-selectsearch-custom.scss
@@ -1,5 +1,10 @@
 @import "variables";
 
+.medscribe .select-search {
+  align-self: center;
+  margin: 0;
+}
+
 .medscribe
   .select-search:not(.select-search--multiple)
   .select-search__input:hover {
