--- a/client/src/icons/css/fontello-codes.css
+++ b/client/src/icons/css/fontello-codes.css
@@ -7,3 +7,11 @@
 .icon-user:before { content: '\e805'; } /* '' */
 .icon-picture:before { content: '\e806'; } /* '' */
 .icon-cancel:before { content: '\e807'; } /* '' */
+.icon-archive:before { content: '\e808'; } /* '' */
+.icon-cog:before { content: '\e809'; } /* '' */
+.icon-keyboard:before { content: '\e80a'; } /* '' */
+.icon-list:before { content: '\e80b'; } /* '' */
+.icon-folder:before { content: '\e80c'; } /* '' */
+.icon-book:before { content: '\e80d'; } /* '' */
+.icon-docs:before { content: '\e80e'; } /* '' */
+.icon-doc-text:before { content: '\e80f'; } /* '' */
