--- a/client/src/icons/css/fontello.css
+++ b/client/src/icons/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?62582169');
-  src: url('../font/fontello.eot?62582169#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?62582169') format('woff2'),
-       url('../font/fontello.woff?62582169') format('woff'),
-       url('../font/fontello.ttf?62582169') format('truetype'),
-       url('../font/fontello.svg?62582169#fontello') format('svg');
+  src: url('../font/fontello.eot?70882831');
+  src: url('../font/fontello.eot?70882831#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?70882831') format('woff2'),
+       url('../font/fontello.woff?70882831') format('woff'),
+       url('../font/fontello.ttf?70882831') format('truetype'),
+       url('../font/fontello.svg?70882831#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?62582169#fontello') format('svg');
+    src: url('../font/fontello.svg?70882831#fontello') format('svg');
   }
 }
 */
@@ -62,3 +62,11 @@
 .icon-user:before { content: '\e805'; } /* '' */
 .icon-picture:before { content: '\e806'; } /* '' */
 .icon-cancel:before { content: '\e807'; } /* '' */
+.icon-archive:before { content: '\e808'; } /* '' */
+.icon-cog:before { content: '\e809'; } /* '' */
+.icon-keyboard:before { content: '\e80a'; } /* '' */
+.icon-list:before { content: '\e80b'; } /* '' */
+.icon-folder:before { content: '\e80c'; } /* '' */
+.icon-book:before { content: '\e80d'; } /* '' */
+.icon-docs:before { content: '\e80e'; } /* '' */
+.icon-doc-text:before { content: '\e80f'; } /* '' */
