--- a/client/src/FormList.module.scss
+++ b/client/src/FormList.module.scss
@@ -50,3 +50,18 @@
   justify-content: flex-end;
   align-items: center;
 }
+
+.controlsContainer {
+  border: 1px solid $color-border;
+  width: 80rem;
+  padding: 2rem;
+
+  margin-left: -40rem;
+
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+
+  background-color: white;
+  z-index: 999;
+}
