Fix up index.html, fix dropdown on edit, fix date
* Fix date format passing into react-datetime component
* Fix the value for the dropdown component
* Take out some of the create react app cruft from the index.html

--- a/client/src/ViewResponse.module.scss
+++ b/client/src/ViewResponse.module.scss
@@ -7,16 +7,6 @@
   justify-content: center;
 }
 
-.medscribeForm {
+.intake {
   width: 80rem;
-}
-
-.intakeSection {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.dropdownLabel {
-  display: block;
-  margin-bottom: 1rem;
 }
