Add lato font, fixup form response css

--- a/client/src/ViewResponse.module.scss
+++ b/client/src/ViewResponse.module.scss
@@ -9,4 +9,12 @@
 
 .intake {
   width: 80rem;
+  background-color: whitesmoke;
+  padding: 2rem;
+  margin-top: 2rem;
+}
+
+.description {
+  font-size: 2rem;
+  margin-bottom: 2rem;
 }
