View response styling improvements

--- a/client/src/ViewResponse.module.scss
+++ b/client/src/ViewResponse.module.scss
@@ -12,6 +12,8 @@
   background-color: whitesmoke;
   padding: 2rem;
   margin-top: 2rem;
+  font-size: 2rem;
+  box-shadow: $box-shadow-light;
 }
 
 .description {
