--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -44,6 +44,8 @@ $box-shadow-light: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 $box-shadow-home: 0 0.3rem 0.3rem rgba(0, 0, 0, 0.05);
 $box-shadow-focus: 0 0 3px $color-input-focus;
 
+$input-margin: 0.5rem 0 1.5rem 0;
+
 @mixin lg {
   @media only screen and (max-width: 800px) {
     @content;
