Styling, add date (not datetime)
* Add form input for date instead of just datetime
* Add styling so that most inputs use flex-basis of 50% so form is a bit
more compact when they are quite long

--- a/client/src/FormInput.module.scss
+++ b/client/src/FormInput.module.scss
@@ -3,14 +3,26 @@
 .sectionHeader {
   font-size: 3rem;
   color: $color-button-primary;
-  margin-top: 1rem;
+  margin-top: 3rem;
   margin-bottom: 2rem;
+  width: 100%;
+  flex-shrink: 0;
 }
 
 .shortAnswer {
   margin: $input-margin;
+  flex-basis: 50%;
 }
 
 .paragraph {
+  flex-basis: 100%;
   margin: $input-margin;
+}
+
+.datetime {
+  flex-basis: 50%;
+}
+
+.dropdown {
+  flex-basis: 100%;
 }
