--- a/client/src/ViewResponse.module.scss
+++ b/client/src/ViewResponse.module.scss
@@ -41,7 +41,9 @@
   font-size: 2rem;
 }
 
-.sectionContainer {
+.sectionsContainer {
+  display: flex;
+  flex-wrap: wrap;
   padding-left: 2rem;
   padding-right: 2rem;
 }
