Add the ability to preview the form look and feel
* Add buttons to FormList to preview a given form
* Add more information to the ResponseList preview from a form so as to
identify a patient ahead of time

--- a/client/src/ResponseList.module.scss
+++ b/client/src/ResponseList.module.scss
@@ -46,8 +46,12 @@
   font-weight: bold;
 }
 
-.firstSection {
+.sectionsContainer {
   font-size: 1.5rem;
+}
+
+.sectionContainer {
+  font-size: 1rem;
 }
 
 .responseIcon {
