Create empty messages for the list components

--- a/client/src/ResponseList.module.scss
+++ b/client/src/ResponseList.module.scss
@@ -6,6 +6,13 @@
   margin-right: auto;
 }
 
+.emptyMessage {
+  font-size: 2rem;
+  background-color: whitesmoke;
+  width: 100%;
+  padding: 2rem;
+}
+
 .table {
   margin-top: 5rem;
   width: 100%;
