Add some mobile stylings to FormList
* Create hamburger menu for the controls on each form
* Transition open on click of row item
* WIP, FormList & Header both incomplete for mobile

--- a/client/src/FormList.module.scss
+++ b/client/src/FormList.module.scss
@@ -48,8 +48,10 @@
   @include md {
     border: none;
     border-bottom: 1px solid $color-border;
+    border-radius: 0;
     margin-bottom: 0;
     padding: 1rem;
+    cursor: pointer;
   }
 }
 
@@ -80,6 +82,10 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+
+  @include md {
+    display: none;
+  }
 }
 
 .controlsContainer {
