--- a/client/src/HamburgerMenu.module.scss
+++ b/client/src/HamburgerMenu.module.scss
@@ -3,9 +3,41 @@
 .menu {
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  box-shadow: inset 0 0 0.5rem #000000;
+  overflow: hidden;
+
+  transition: max-height 0.5s;
+  max-height: 0;
 }
 
-.menuClosed {
-  display: none;
+.menuOpen {
+  max-height: 50rem;
+}
+
+.menuItem {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+  padding: 1rem;
+
+  border: 1px solid lighten($color-border, 50%);
+  background-color: lighten(whitesmoke, 20%);
+
+  cursor: pointer;
+
+  &:hover {
+    background-color: whitesmoke;
+  }
+
+  &:active {
+    background-color: white;
+  }
+}
+
+.navText {
+  color: $color-text-primary;
+  user-select: none;
 }
