Refactor bottom controls into TabBar
* All screens with bottom controls can now use this TabBar
* We have mobile friendly styles, and it becomes like an iOS bottom
TabBar under 800px
* We may shift button designs to look more like iOS on mobile, but for
now we just remove the icon and make the font smaller

--- a/client/src/Header.module.scss
+++ b/client/src/Header.module.scss
@@ -19,6 +19,7 @@
   font-weight: bold;
   letter-spacing: 0.2rem;
   color: $color-button-primary;
+  cursor: pointer;
 
   @include md {
     font-size: 2rem;
