--- a/client/src/Button.module.scss
+++ b/client/src/Button.module.scss
@@ -9,6 +9,10 @@
   display: flex;
   align-items: center;
   font-weight: bold;
+
+  @include md {
+    font-size: 1rem;
+  }
 }
 
 .large {
@@ -24,6 +28,10 @@
   font-size: 1.5rem;
   margin-left: -0.5rem;
   margin-right: 0.3rem;
+
+  @include md {
+    display: none;
+  }
 }
 
 .primary {
