--- a/client/src/IconButton.module.scss
+++ b/client/src/IconButton.module.scss
@@ -33,14 +33,21 @@
 .sm {
   width: 3rem;
   height: 3rem;
-  font-size: 1.5rem;
-  line-height: 1.5;
+  font-size: 2rem;
+  line-height: 2;
 }
 
 .md {
   width: 5rem;
   height: 5rem;
   font-size: 3rem;
+  font-weight: bold;
+}
+
+.lg {
+  width: 6rem;
+  height: 6rem;
+  font-size: 3.5rem;
   font-weight: bold;
 }
 
@@ -58,9 +65,6 @@
 
 .iconButton:active {
   transform: translateY(0.1rem);
-}
-
-.iconButton:focus {
   outline: none;
   border: none;
   color: $color-input-focus;
