--- a/client/src/icons/css/fontello.css
+++ b/client/src/icons/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?70882831');
-  src: url('../font/fontello.eot?70882831#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?70882831') format('woff2'),
-       url('../font/fontello.woff?70882831') format('woff'),
-       url('../font/fontello.ttf?70882831') format('truetype'),
-       url('../font/fontello.svg?70882831#fontello') format('svg');
+  src: url('../font/fontello.eot?20742561');
+  src: url('../font/fontello.eot?20742561#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?20742561') format('woff2'),
+       url('../font/fontello.woff?20742561') format('woff'),
+       url('../font/fontello.ttf?20742561') format('truetype'),
+       url('../font/fontello.svg?20742561#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?70882831#fontello') format('svg');
+    src: url('../font/fontello.svg?20742561#fontello') format('svg');
   }
 }
 */
@@ -70,3 +70,6 @@
 .icon-book:before { content: '\e80d'; } /* '' */
 .icon-docs:before { content: '\e80e'; } /* '' */
 .icon-doc-text:before { content: '\e80f'; } /* '' */
+.icon-menu:before { content: '\e810'; } /* '' */
+.icon-link:before { content: '\e811'; } /* '' */
+.icon-lock:before { content: '\e812'; } /* '' */
