Mobile styling for the forms

--- a/client/src/FormInput.module.scss
+++ b/client/src/FormInput.module.scss
@@ -11,8 +11,16 @@
 
 .datetime {
   flex-basis: 50%;
+
+  @include md {
+    flex-basis: 100%;
+  }
 }
 
 .dropdown {
   flex-basis: 100%;
+
+  @include md {
+    flex-basis: 100%;
+  }
 }
