--- a/client/src/HamburgerMenu.module.scss
+++ b/client/src/HamburgerMenu.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  box-shadow: inset 0 0 0.5rem #000000;
+  box-shadow: $box-shadow-home;
   overflow: hidden;
 
   transition: max-height 0.5s;
