--- a/client/src/Header.module.scss
+++ b/client/src/Header.module.scss
@@ -1,5 +1,15 @@
 @import "variables";
 
+.container {
+  @include md {
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    z-index: 999;
+  }
+}
+
 .header {
   display: flex;
   justify-content: space-between;
