--- a/client/src/Home.module.scss
+++ b/client/src/Home.module.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .container {
   background-color: white;
 
@@ -8,6 +10,10 @@
 
   display: flex;
   flex-direction: column;
+
+  @include md {
+    padding-top: 7rem;
+  }
 }
 
 .callToAction {
