--- a/client/src/List.module.scss
+++ b/client/src/List.module.scss
@@ -39,7 +39,8 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 3rem;
-  background-color: whitesmoke;
+  background-color: white;
+  box-shadow: $box-shadow-home;
 
   border: 1px solid $color-border;
   border-radius: $border-radius;
