--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -42,6 +42,7 @@ $transition-fn: 0.3s ease-in-out;
 $box-shadow-dark: 0 1rem 1rem rgba(0, 0, 0, 0.2);
 $box-shadow-light: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
 $box-shadow-home: 0 0.3rem 0.3rem rgba(0, 0, 0, 0.05);
+$box-shadow-top: 0 -0.3rem 0.3rem -0.3rem rgba(0, 0, 0, 0.1);
 $box-shadow-focus: 0 0 3px $color-input-focus;
 
 $input-margin: 0.5rem 0 1.5rem 0;
