--- a/client/src/ViewResponse.module.scss
+++ b/client/src/ViewResponse.module.scss
@@ -4,9 +4,14 @@
   display: flex;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 2rem;
   justify-content: center;
   padding-bottom: 5rem;
   background-color: white;
+
+  @include md {
+    margin-top: 0;
+  }
 }
 
 .intake {
