--- a/client/src/ViewResponse.module.scss
+++ b/client/src/ViewResponse.module.scss
@@ -17,6 +17,7 @@
 .intake {
   width: 80rem;
   margin-top: 2rem;
+  margin-bottom: 6rem;
   font-size: 2rem;
   box-shadow: $box-shadow-light;
 
@@ -32,6 +33,10 @@
   color: white;
   padding: 0;
   margin: 0;
+
+  @include md {
+    font-size: 2rem;
+  }
 }
 
 .titleContainer {
@@ -60,6 +65,10 @@
 
 .description {
   font-size: 2rem;
+
+  @include md {
+    font-size: 1.5rem;
+  }
 }
 
 .sectionsContainer {
