--- a/client/src/icons/css/fontello-codes.css
+++ b/client/src/icons/css/fontello-codes.css
@@ -18,3 +18,6 @@
 .icon-menu:before { content: '\e810'; } /* '' */
 .icon-link:before { content: '\e811'; } /* '' */
 .icon-lock:before { content: '\e812'; } /* '' */
+.icon-down-open-big:before { content: '\e813'; } /* '' */
+.icon-check:before { content: '\e814'; } /* '' */
+.icon-erase:before { content: '\e815'; } /* '' */
