--- a/client/src/icons/css/fontello.css
+++ b/client/src/icons/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?20742561');
-  src: url('../font/fontello.eot?20742561#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?20742561') format('woff2'),
-       url('../font/fontello.woff?20742561') format('woff'),
-       url('../font/fontello.ttf?20742561') format('truetype'),
-       url('../font/fontello.svg?20742561#fontello') format('svg');
+  src: url('../font/fontello.eot?13139486');
+  src: url('../font/fontello.eot?13139486#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?13139486') format('woff2'),
+       url('../font/fontello.woff?13139486') format('woff'),
+       url('../font/fontello.ttf?13139486') format('truetype'),
+       url('../font/fontello.svg?13139486#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?20742561#fontello') format('svg');
+    src: url('../font/fontello.svg?13139486#fontello') format('svg');
   }
 }
 */
@@ -73,3 +73,6 @@
 .icon-menu:before { content: '\e810'; } /* '' */
 .icon-link:before { content: '\e811'; } /* '' */
 .icon-lock:before { content: '\e812'; } /* '' */
+.icon-down-open-big:before { content: '\e813'; } /* '' */
+.icon-check:before { content: '\e814'; } /* '' */
+.icon-erase:before { content: '\e815'; } /* '' */
